2. When requesting covers from a HTTP server, use QUrl::toPercentEncoding.
3. Fix multiple downlod attempts when getting covers from HTTP.
4. With KDE builds (4.7 or later), and Windows Qt builds, reconnect to MPD when
   system is resumed. (A reconnect attempt is made every half second for a max
   of 15 seconds)
5. To help with windows build, embed pre-rendered versions of main icon.

0.8.2
-----
1. Fix track order when adding newly added album to playqueue.
2. When dragging one artist, or album, in treeview to play queue, show cover
   image (if possible).
3. Fix crash when toggling playqueue in sidebar at application start-up.

0.8.1
-----
 1. Detect when this is the first time a user has run Cantata. If so, don't
    place the play queue in the sidebar.
 2. Dont attempt to rename a playlist to its current name - otherwise it is
    deleted!
 3. When applying updates in tag editor, track organizer, or replay gain dialog
    show a progress bar to indicate activity.
 4. Display version number in Qt-only about dialog.
 5. When expanding interface, set max size to INT_MAX. Otherwise, on windows at
    least, the maximise button can get disabled.
 6. If 'Music folder' in settings dialog is a http folder (path starts with
    http://), then attempt to download cover-art from the http server.
 7. Dont update MPD volume just after we receive a status update - as MPD already
    has that setting! Fixes an issue with pulseaudio setups - where MPD
    disconnects from pulse audio, tells cantata that volume is -1, and cantata
    attempts to set volume to 0.
 8. When fading on stop, reset original volume immediately before sending stop.
 9. Fix saving of library to XML cache when multiple artist albums are grouped
    under 'Various Artists' (only save artist attribute once!!)
10. Use command list when adding songs to playlist.

0.8.0
-----
 1. Add ability to play MPD HTTP output stream via phonon. Thanks to Marcel
    Bosling for the idea and initial patch.